--- a/services/ricovero.html
+++ b/services/ricovero.html
@@ -39,6 +39,7 @@
       <div class="container">
         <h1 id="pageTitle" class="jumbotron-heading">Ricovero e Orari</h1>
         <p id="articleDescription" class="text-muted">
+          In questa pagina potrai capire quando è il momento migliore per la tua visita
         </p>
         <p>
           <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
@@ -49,6 +50,34 @@
     <section class="p-5">
       <div id="article">
         <p id="articleText">
+          Avviso Coronavirus
+          REGOLE PER LE VISITE AI PAZIENTI RICOVERATI
+
+           
+
+          L'accesso ai parenti/visitatori nelle degenze è previsto,  in linea di massima, dalle ore 18 alle ore 20. E’ consentito di norma per un solo visitatore alla volta per paziente,  per un tempo massimo di 45 minuti e previa verifica di validità del green pass, secondo modalità e orari concordati con il Reparto.
+
+          Il green pass sarà controllato ai varchi di ingresso, in reparto e dovrà essere mostrato dal parente/visitatore su richiesta degli operatori dell'Ospedale.
+
+          Gravidanza e parto. Per limitare il rischio di contagio per ogni donna e per il suo bambino l'accesso in ospedale è consentito esclusivamente alle pazienti. Ad ogni papà saranno date le informazioni necessarie e assegnato un braccialetto identificativo e un orario di ingresso.
+          Per saperne di più, clicca qui
+
+          Pediatria. Solo un genitore/parente può essere presente in ambulatorio; gli accompagnatori non possono soggiornare in sala d'attesa ma attendere fuori dalla struttura; al fine di evitare sovraffollamenti, è richiesto agli utenti di accedere agli ambulatori non prima dell'orario di appuntamento previsto.
+
+           
+          Accoglienza in reparto
+          All’arrivo in ospedale sarai accolto dal nostro personale infermieristico che si prenderà cura di te e ti informerà sulle principali regole del reparto e su come si svolgeranno le giornate di ricovero.
+
+          Se il paziente è un bambino, puoi portare i suoi giochi o usare quelli presenti nella saletta ricreativa.
+
+          Ti consigliamo comunque di non portare oggetti di valore o eccessive somme di denaro perché l’ospedale non è responsabile di furti o smarrimenti.
+
+          Ѐ importante presentarsi al momento del ricovero con:
+
+          Documento d’identità e tessera sanitaria
+          Tutta la documentazione sanitaria, anche non inerente alla patologia principale
+          Indicazioni relative ai farmaci assunti abitualmente
+          Necessario per l’igiene personale
         </p>
       </div>
     </section>
@@ -71,10 +100,10 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    $.getJSON("../articles/articles.json", function(json) {
-      articleText.innerHTML = json["Services"][4]["Text"];
-      articleDescription.innerHTML = json["Services"][4]["Description"];
-    });
+    //$.getJSON("../articles/articles.json", function(json) {
+      // articleText.innerHTML = json["Services"][4]["Text"];
+      // articleDescription.innerHTML = json["Services"][4]["Description"];
+    //});
   });
 </script>
 
