--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 
   <title>Policlinico di Milano</title>
 
-
   <!-- JQuery -->
   <script src="libraries/jquery-3.5.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="libraries/bootstrap-4.5.2/css/bootstrap.min.css">
   <script src="libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+  <!-- JavaScript -->
   <script src="js/article.js" type="text/javascript"></script>
-
+  <!-- CSS -->
   <style media="screen">
     html {
       scroll-behavior: smooth;
@@ -190,7 +189,5 @@
       <p>Sito realizzato per progetto di Reti in Agosto 2021</p>
     </div>
   </footer>
-
 </body>
-
 </html>
