--- a/services/cartella-clinica.html
+++ b/services/cartella-clinica.html
@@ -14,8 +14,8 @@
   <script src="../libraries/jquery-3.5.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../libraries/bootstrap-4.5.2/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
+  <!-- JavaScript -->
   <script src="../js/article.js" type="text/javascript"></script>
 
 </head>
