--- a/services/esami-laboratorio.html
+++ b/services/esami-laboratorio.html
@@ -14,8 +14,8 @@
   <script src="../libraries/jquery-3.5.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../libraries/bootstrap-4.5.2/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
+  <!-- JavaScript -->
   <script src="../js/article.js" type="text/javascript"></script>
 </head>
 
@@ -42,22 +42,6 @@
           Tutte le informazioni principali per i tuoi esami
         </p>
         <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
-<!--         <div class=row>
-          <div class="col-sm-12">
-            <input type="text" id="inputUsername" placeholder="Username">
-          </div>
-          <div style="padding-top: 15px;" class="col-sm-12">
-            <input  type="password" id="inputPassword" placeholder="Password">
-          </div>
-
-          Accedi e torna alla home
-          <div class="col-sm-12">
-          <a onclick="getLabExams(inputUsername.value, inputPassword.value)" class="btn btn-primary my-2">Visualizza</a>
-          </div>
-          <div class="col-sm-12">
-          
-          </div>
-        </div> -->
       </div>
     </section>
 
