--- a/services/referti.html
+++ b/services/referti.html
@@ -14,14 +14,12 @@
   <script src="../libraries/jquery-3.5.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../libraries/bootstrap-4.5.2/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
+  <!-- JavaScript -->
   <script src="../js/article.js" type="text/javascript"></script>
-
 </head>
 
 <body>
-
   <header>
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
@@ -32,7 +30,6 @@
       </div>
     </div>
   </header>
-
   <main role="main">
     <section class="jumbotron text-center">
       <div class="container">
@@ -73,7 +70,6 @@
       </div>
     </section>
   </main>
-
   <footer class="text-muted p-4">
     <div class="container">
       <p class="float-right">
