--- a/services/ricovero.html
+++ b/services/ricovero.html
@@ -14,14 +14,13 @@
   <script src="../libraries/jquery-3.5.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../libraries/bootstrap-4.5.2/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
+  <!-- JavaScript -->
   <script src="../js/article.js" type="text/javascript"></script>
 </head>
 
 
 <body>
-
   <header>
     <div class="navbar box-shadow">
       <div class="container d-flex justify-content-between">
@@ -81,8 +80,6 @@
         </p>
       </div>
     </section>
-
-
     </div>
     </div>
   </main>
@@ -95,6 +92,5 @@
       <p>Sito realizzato per progetto di Reti in Agosto 2021</p>
     </div>
   </footer>
-
 </body>
 </html>
