--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="libraries/bootstrap-4.5.2/css/bootstrap.min.css">
   <script src="libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
   <!-- JavaScript -->
-  <script src="js/article.js" type="text/javascript"></script>
+  <script src="js/service.js" type="text/javascript"></script>
   <!-- CSS -->
   <style media="screen">
     html {
@@ -24,7 +24,7 @@
     }
 
     #main-section {
-      background: url('img/NuovoPoliclinico.jpeg');
+      background: url('img/homepage/NuovoPoliclinico.jpeg');
       background-size: cover;
       background-position: center;
       position: relative;
@@ -42,8 +42,6 @@
   </style>
 
 <body>
-
-
   <header>
     <div class="collapse bg-light" id="navbarHeader">
       <div class="container">
@@ -103,7 +101,7 @@
                 <p class="card-text"><strong>Esami di Laboratorio</strong>, consulta gli esiti degli esami di laboratorio che hai fatto.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="w-100 d-flex justify-content-between">
-                    <button type="button" onclick="goToArticle(0)" class="btn btn-sm btn-outline-secondary">Leggi</button>
+                    <button type="button" onclick="location.href = 'services/esami-laboratorio.html'" class="btn btn-sm btn-outline-secondary">Leggi</button>
                   </div>
                 </div>
 
@@ -119,7 +117,7 @@
                 <p class="card-text"><strong>Referti</strong>, ritirali comodamente da casa tua o vieni in ospedale.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="w-100 d-flex justify-content-between">
-                    <button type="button" onclick="goToArticle(1)" class="btn btn-sm btn-outline-secondary">Leggi</button>
+                    <button type="button" onclick="location.href = 'services/referti.html'" class="btn btn-sm btn-outline-secondary">Leggi</button>
                   </div>
                 </div>
               </div>
@@ -135,7 +133,7 @@
                 <p class="card-text"><strong>Cartella Clinica</strong>, richiedi la tua cartella clinica e altra documentazione sanitaria.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="w-100 d-flex justify-content-between">
-                    <button type="button" onclick="goToArticle(2)" class="btn btn-sm btn-outline-secondary">Leggi</button>
+                    <button type="button" onclick="location.href = 'services/cartella-clinica.html'" class="btn btn-sm btn-outline-secondary">Leggi</button>
                   </div>
                 </div>
               </div>
@@ -152,7 +150,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="w-100 d-flex justify-content-between">
-                    <button type="button" onclick="goToArticle(3)" class="btn btn-sm btn-outline-secondary">Leggi</button>
+                    <button type="button" onclick="location.href = 'services/ricovero.html'" class="btn btn-sm btn-outline-secondary">Leggi</button>
                   </div>
                 </div>
               </div>
@@ -169,7 +167,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="w-100 d-flex justify-content-between">
-                    <button type="button" onclick="goToArticle(4)" class="btn btn-sm btn-outline-secondary">Leggi</button>
+                    <button type="button" onclick="location.href = 'services/volontariato.html'" class="btn btn-sm btn-outline-secondary">Leggi</button>
                   </div>
                 </div>
               </div>
