--- a/services/referti.html
+++ b/services/referti.html
@@ -1,4 +1,4 @@
-<!doctype html>
+s<!doctype html>
 <html lang="it">
 
 <head>
@@ -15,8 +15,6 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../libraries/bootstrap-4.5.2/css/bootstrap.min.css">
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
-  <!-- JavaScript -->
-  <script src="../js/article.js" type="text/javascript"></script>
 </head>
 
 <body>
