--- a/services/volontariato.html
+++ b/services/volontariato.html
@@ -16,8 +16,9 @@
   <link rel="stylesheet" href="../libraries/bootstrap-4.5.2/css/bootstrap.min.css">
   <script src="../libraries/bootstrap-4.5.2/js/bootstrap.min.js"></script>
   <!-- JavaScript -->
-  <script src="../js/article.js" type="text/javascript"></script>
+  <script src="../js/service.js" type="text/javascript"></script>
 </head>
+
 <body>
   <header>
     <div class="navbar box-shadow">
@@ -29,9 +30,7 @@
       </div>
     </div>
   </header>
-
   <main role="main">
-
     <section class="jumbotron text-center">
       <div class="container">
         <h1 id="pageTitle" class="jumbotron-heading">I nostri Volontari</h1>
@@ -43,7 +42,6 @@
         </p>
       </div>
     </section>
-
     <section class="p-5">
       <div id="article">
         <p id="articleText">
